<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hubbub</string>
    <string name="openDrawer">Default Account</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <!-- Navigation -->
    <string name="sign_up">Sign Up</string>
	<string name="login">Login</string>
	<string name="search_prompt">What interests you?</string>
	<string name="search_hint"></string>
	
	<!-- Titles -->
	<string name="title_user_friends">Following:</string>
	<string name="title_favorite_hub">Most Visited Hub:</string>
	
	<!-- Defaults on Widgets -->
	<string name="default_event_name">Default Event Name</string>
	<string name="default_event_location">Default Event Location</string>
	<string name="default_event_time">12/15/2014 12:00pm</string>
	<string name="default_user_fullname">John Doe</string>
	<string name="default_user_username">Default User Name</string>
	<string name="default_user_details">These are the default user details for bub</string>
	<string name="default_hub_name">DefaultHub</string>
	
	<!-- Defaults on Data Creation -->
	<string name="username">Username</string>
	<string name="firstname">First Name</string>
	<string name="lastname">Last Name</string>
	<string name="password">Password</string>
	<string name="authpassword">Confirm Password</string>
	<string name="dateofbirth">DOB - mm/dd/yyyy</string>
	<string name="email">Email</string>
	<string name="details">Tell us about you.</string>
	<string name="setpicdesc">Set Profile Picture</string>
	<string name="menu_create_event">Create Event</string>
	<string name="menu_search_event">Search Event</string>
	<string name="logout">Logout</string>
	<string name="user_details">User Details</string>
	<string name="date_and_time">Date and Time</string>
	<string name="create_user">Create User Account</string>
	
	<!-- Defaults on Create Event -->
	<string name="event_name">Bub Name</string>
    <string name="event_details">Details for event:</string>
	<string name="create_bub">Create Bub</string>
    <string name="bub_location">Location</string>
    <string name="bub_start_time"> Start Time</string>
    <string name="bub_end_time">End Time</string>
    <string name="bub_start_date">Start Date</string>
    <string name="bub_end_date">End Date</string>
    <string name="text_pingIn">Choose Ping In time</string>
    <string name="Privacy">Privacy</string>
    <string name="bub_tag">Tag</string>
    <string name="text_public">Public</string>
     <string name="text_private">Private</string>

    <!-- Defaults on Create Hub -->
    <string name="hub_default_location">Default Hub Location</string>
    <string name="hub_default_name">Default Hub Name</string>
    <string name="hub_default_num_followers">0</string>
    <string name="hub_label_num_events">Events:</string>
    <string name="hub_default_about">Default details about hub</string>

     <!-- pingIn Strings -->
    <string name="YES">Yes</string>
	<string name="No">No</string>
	<string name="Maybe">Maybe</string>
	<string name="Attending">Are you still coming ?</string>
     
     
     <!--  Following Events -->
     <string name="following">Following:</string>
     <string name="standard_time_text">Time</string>
     <string name="textview_tags_header">Tags go here</string>
     <string name="follow_event">Follow Event</string>
     <string name="unfollow">Unfollow Event</string>
     <string name="event_followers_default">No Followers</string>
     <string name="num_following">0</string>
     <string name="tapp_in_header">Ping-In Time:</string>
     <string name="event_tags">Tags:</string>
      <string name="event_details_default">No Details</string>
      <string name="connect">Connect</string>
      <string name="find_address">Find Address</string>
      <string name="DEBUG_GEO">DEBUG_GEO</string>


    <string name="empty_error_default">Default Empty Parse Return</string>
    <string name="follow_hub">Follow Hub</string>
    <string name="follow_bub">Follow Bub</string>
    <string name="unfollow_hub">Unfollow Hub</string>
    <string name="unfollow_bub">Unfollow Bub</string>
    <string name="app_motto">Be with what you love.</string>
    <string name="invite">Invite</string>
    <string name="text_follow">Follow</string>
    <string name="empty_follower_list"> You are not following anyone</string>
    <string name="background_image_instructions">Upload a profile background</string>
    <string name="tag_instructions">Type Tags for the bub using #\'s</string>
    <string name="details_instructions">Tell us about your event</string>
    <string name="create_hub">Create Hub</string>
    <string name="hub_details">What is this hub about?</string>
    <string name="hub_name_hint">Hub Name</string>
    <string name="background_hub_instructions"> Upload a background for the hub</string>

</resources>
