<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dingohub.hubbub.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
      <item
        android:id="@+id/create_bub"
        android:orderInCategory="200"
        android:showAsAction="ifRoom"
        android:title="@string/create_bub"
        android:icon="@drawable/create_bub"/>
      <item
        android:id="@+id/search_bub"
        android:orderInCategory="300"
        android:showAsAction="ifRoom"
        android:title="@string/menu_search_event"
        android:icon="@drawable/search_glass" />
       <item
	    android:id="@+id/logout"
	    android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/logout"/>
</menu>
