<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkCyan" >

    <ImageView
        android:id="@+id/cardview_fbub_picture"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/events_calendar_icon" />

    <TextView
        android:id="@+id/cardview_bub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cardview_bub_location"
        android:layout_alignParentTop="true"
        android:text="@string/default_event_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/cardview_bub_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardview_bub_title"
        android:layout_toRightOf="@+id/cardview_fbub_picture"
        android:text="@string/default_event_location"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/cardview_fbub_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardview_bub_location"
        android:layout_toRightOf="@+id/cardview_fbub_picture"
        android:text="@string/bub_start_date"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/text_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cardview_fbub_start_date"
        android:layout_alignBottom="@+id/cardview_fbub_start_date"
        android:layout_toRightOf="@+id/cardview_bub_title"
        android:text="@string/following"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/listitem_fbub_num_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/cardview_bub_location"
        android:layout_toRightOf="@+id/text_following"
        android:text="@string/num_following"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/cardview_text_about"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/cardview_fbub_picture"
        android:background="@drawable/edittext_closedblue"
        android:paddingLeft="6sp"
        android:text="@string/event_details_default"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/listitem_fbub_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_following"
        android:layout_below="@+id/text_following"
        android:text="@string/bub_end_time"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/cardview_fbub_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cardview_fbub_start_date"
        android:layout_below="@+id/cardview_fbub_start_date"
        android:text="@string/bub_start_time"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
