<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:fillViewport="true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:background="@color/AntiqueWhite"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/material_toolbar"
            layout="@layout/material_toolbar">
        </include>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="1156dp"
            android:background="@color/AntiqueWhite"
            android:fillViewport="true" >

            <EditText
                android:id="@+id/bub_details"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:ems="10"
                android:inputType="textMultiLine"
                android:hint="@string/details_instructions"
                android:layout_centerInParent="@+id/bub_create"
                android:layout_marginTop="37dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/pingIn_spinner"
                android:layout_alignLeft="@+id/bub_create"
                android:layout_alignStart="@+id/bub_create" />

            <Spinner
                android:id="@+id/pingIn_spinner"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_below="@+id/bub_pingIn"
                android:layout_centerHorizontal="true" />

            <EditText
                android:id="@+id/bub_start_time"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/bub_start_time"
                android:inputType="time"
                android:layout_below="@+id/bub_location"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="30dp" />

            <EditText
                android:id="@+id/bub_end_time"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/bub_end_time"
                android:inputType="time"
                android:layout_alignTop="@+id/bub_end_date"
                android:layout_toRightOf="@+id/bub_end_date"
                android:layout_toEndOf="@+id/bub_end_date" />

            <EditText
                android:id="@+id/bub_start_date"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/bub_start_date"
                android:inputType="date"
                android:layout_alignTop="@+id/bub_start_time"
                android:layout_toRightOf="@+id/bub_start_time"
                android:layout_toEndOf="@+id/bub_start_time" />

            <EditText
                android:id="@+id/bub_end_date"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/bub_end_date"
                android:inputType="date"
                android:layout_below="@+id/bub_start_time"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="26dp" />

            <RadioButton
                android:id="@+id/public_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_public"
                android:layout_alignTop="@+id/bub_end_time"
                android:layout_toRightOf="@+id/bub_end_time"
                android:layout_toEndOf="@+id/bub_end_time"
                android:checked="false" />

            <EditText
                android:id="@+id/bub_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="34dp"
                android:layout_below="@+id/bub_end_time"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:hint="@string/tag_instructions"
                android:phoneNumber="false" />

            <TextView
                android:id="@+id/bub_pingIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_pingIn"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_below="@+id/bub_tag"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="21dp" />

            <ImageButton
                android:id="@+id/user_background_image"
                android:layout_width="150dp"
                android:layout_height="225dp"
                android:src="@drawable/create_bub"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <EditText
                android:id="@+id/bub_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/bub_location"
                android:inputType="textPostalAddress"
                android:layout_marginTop="26dp"
                android:layout_below="@+id/bub_name"
                android:layout_centerHorizontal="true" />

            <EditText
                android:id="@+id/bub_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/event_name"
                android:inputType="textPostalAddress"
                android:layout_alignBottom="@+id/user_background_image"
                android:layout_centerHorizontal="true" />

            <RadioButton
                android:id="@+id/private_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_private"
                android:layout_above="@+id/bub_end_date"
                android:layout_toRightOf="@+id/bub_start_date"
                android:layout_toEndOf="@+id/bub_start_date"
                android:checked="false" />

            <Button
                android:textColor="@color/WhiteSmoke"
                android:background="@color/ColorPrimary"
                android:textSize="16sp"
                android:elevation="10dp"
                android:elegantTextHeight="true"
                android:id="@+id/bub_create"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:text="@string/create_bub"
                android:layout_marginTop="49dp"
                android:layout_below="@+id/bub_details"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>