<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/following_card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="10dp"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/cardview_fbub_picture"
                android:layout_width="75dp"
                android:layout_height="150dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/events_calendar_icon"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:id="@+id/cardview_fbub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_event_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_above="@+id/cardview_fbub_location"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/cardview_fbub_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_event_location"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_below="@+id/cardview_fbub_picture"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/cardview_fbub_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bub_start_date"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_below="@+id/cardview_fbub_start_time"
                android:layout_alignRight="@+id/cardview_fbub_start_time"
                android:layout_alignEnd="@+id/cardview_fbub_start_time" />

            <TextView
                android:id="@+id/text_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_above="@+id/cardview_fbub_start_date"
                android:layout_toRightOf="@+id/cardview_fbub_location"
                android:layout_toEndOf="@+id/cardview_fbub_location" />

            <TextView
                android:id="@+id/cardview_fbub_num_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_following"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_alignTop="@+id/text_following"
                android:layout_toRightOf="@+id/text_following"
                android:layout_toEndOf="@+id/text_following"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/cardview_fbub_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/text_following"
                android:layout_below="@+id/text_following"
                android:text="@string/bub_end_time"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/cardview_fbub_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bub_start_time"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_below="@+id/cardview_fbub_location"
                android:layout_toLeftOf="@+id/cardview_fbub_location"
                android:layout_toStartOf="@+id/cardview_fbub_location" />

            </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>