<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:fillViewport="true" >
	
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/AntiqueWhite" >

    <ImageView
        android:id="@+id/image_profile_picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/default_user" />

    <TextView
        android:id="@+id/text_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/image_profile_picture"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/image_profile_picture"
        android:text="@string/default_user_fullname"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_above="@+id/text_fullname"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/image_profile_picture"
        android:background="@drawable/textview_username"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/cardview_text_about"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/text_username"
        android:layout_below="@+id/image_profile_picture"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_closedblue"
        android:text="@string/event_details_default"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/text_static_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cardview_text_about"
        android:layout_below="@+id/cardview_text_about"
        android:layout_marginTop="16dp"
        android:text="@string/title_user_friends"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>

</ScrollView>